# autotools-skeleton

./: .gitignore  ChangeLog  Makefile.am  README  README.md  bootstrap.sh  configure.ac
src/: main.c
