AC_INIT([A basic autotools project],[0.0.0],[ldav1s@yahoo.com],[autotools-skeleton])
AC_PREREQ([2.69])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_AUX_DIR([auxd])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.12 foreign])

# Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AM_PROG_LIBTOOL
AC_PROG_SED

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
